Fix dropdown menu visibility on hover

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -83,7 +83,6 @@ nav#nav-menu .icon-button.has-notifications::after {
     width: 100%;
     top: 100%;
     right: 0;
-    margin-top: 2px;
     background-color: #f5f5f5;
     border: none;
     border-radius: 8px;
